--- a/index.html
+++ b/index.html
@@ -170,14 +170,14 @@ Fancy seeing you here! If you have any feedback on my code or suggestions on how
                             <h3 class="project-title">Visual Design & Branding</h3>
                         </div>
                     </a>
-                    <a href="/projects/laysstaxwebsite.html" class="col-12 col-sm-6 col-lg-4 project-preview">
+                    <!-- <a href="/projects/laysstaxwebsite.html" class="col-12 col-sm-6 col-lg-4 project-preview">
                         <div class="project-icon-container col-4">
                             <img class="project-icon" src="/images/icon-stacks.svg" alt="">
                         </div>
                         <div class="col-8">
                             <h3 class="project-title">Lay’s Stax Website</h3>
                         </div>
-                    </a>
+                    </a> -->
                 </div>
             </div>
         </section>
