Added new case study

--- a/index.html
+++ b/index.html
@@ -106,6 +106,14 @@ Fancy seeing you here! If you have any feedback on my code or suggestions on how
             <h2 class="font-display text-center subtitle">Featured Projects</h2>
             <div class="container-fluid">
                 <div class="row mt-2 mb-0">
+                    <a href="/projects/checkouttemplates.html" class="col-12 col-sm-6 col-lg-4 project-preview">
+                        <div class="project-icon-container col-4">
+                            <img class="project-icon" src="/images/icon-templates.svg" alt="">
+                        </div>
+                        <div class="col-8">
+                            <h3 class="project-title">Checkout Templates</h3>
+                        </div>
+                    </a>
                     <a href="/projects/shoppingmobileapp.html" class="col-12 col-sm-6 col-lg-4 project-preview">
                         <div class="project-icon-container col-4">
                             <img class="project-icon" src="/images/icon-cart.svg" alt="">
@@ -146,14 +154,6 @@ Fancy seeing you here! If you have any feedback on my code or suggestions on how
                             <h3 class="project-title">Skylanders 3D Adventure</h3>
                         </div>
                     </a>
-                    <a href="/projects/generatormakerspace.html" class="col-12 col-sm-6 col-lg-4 project-preview">
-                        <div class="project-icon-container col-4">
-                            <img class="project-icon" src="/images/icon-bolt.svg" alt="">
-                        </div>
-                        <div class="col-8">
-                            <h3 class="project-title">Generator Makerspace</h3>
-                        </div>
-                    </a>
                     <a href="/projects/monsterproject.html" class="col-12 col-sm-6 col-lg-4 project-preview">
                         <div class="project-icon-container col-4">
                             <img class="project-icon" src="/images/icon-monster.svg" alt="">
@@ -168,6 +168,14 @@ Fancy seeing you here! If you have any feedback on my code or suggestions on how
                         </div>
                         <div class="col-8">
                             <h3 class="project-title">Visual Design & Branding</h3>
+                        </div>
+                    </a>
+                    <a href="/projects/generatormakerspace.html" class="col-12 col-sm-6 col-lg-4 project-preview">
+                        <div class="project-icon-container col-4">
+                            <img class="project-icon" src="/images/icon-bolt.svg" alt="">
+                        </div>
+                        <div class="col-8">
+                            <h3 class="project-title">Generator Makerspace</h3>
                         </div>
                     </a>
                     <!-- <a href="/projects/laysstaxwebsite.html" class="col-12 col-sm-6 col-lg-4 project-preview">
