--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ Fancy seeing you here! If you have any feedback on my code or suggestions on how
     <div class="profile">
         <div class="heroes">
             <h1 class="font-base pill">Howdy, my name is <span class="name">Jonny Abowd</span></h1>
-            <img class="profile-img" src="./images/ja-profile-photo.png">
+            <img class="profile-img" src="./images/JA_profile_photo.png">
         </div>
         <h2 class="font-display title fade-in">Product Design Lead <span class="d-inline-block">
             </span><span class="d-block">and
@@ -65,17 +65,16 @@ Fancy seeing you here! If you have any feedback on my code or suggestions on how
         <!-- <div class="hr"></div> -->
         <div class="body fade-in">
             <p class="bio">
-                I'm a creative problem solver with
+                I’ve spent over  
                 <span>
                     <script>document.write(
                             new Date().getFullYear() - 2007
                         );
                     </script>
                 </span>
-                years of experience. I lead teams, love challenges, and have a relentlessly positive
-                attitude.
+                 years as a creative leader, tackling complex design challenges with a mix of curiosity, strategy, and optimism. Along the way, I’ve led teams, built systems, and delivered experiences that make life easier for millions of people.
                 <br><br>
-                Got questions or fancy a conversation? <a href="#contact" class="contact-text-link">Contact me</a>
+                Fancy a conversation? <a href="#contact" class="contact-text-link">Contact me</a>
                 anytime!
             </p>
             <div class="contact">
@@ -191,7 +190,7 @@ Fancy seeing you here! If you have any feedback on my code or suggestions on how
         </section>
         <div class="hr fade-in"></div>
         <section class="fade-in">
-            <h2 class="font-display text-center subtitle">Featured Clients</h2>
+            <h2 class="font-display text-center subtitle">Featured collaborations</h2>
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-6 col-md-4 p-3 p-md-5 client-logo-container">
@@ -222,17 +221,15 @@ Fancy seeing you here! If you have any feedback on my code or suggestions on how
                 <div class="row d-flex justify-content-between">
                     <div class="col-12 col-md-6 mb-3 px-md-5">
                         <p class="contact-info col-12 col-md-11 mb-3 bio">
-                            I believe creativity can solve problems both big and small.
-                            I also believe as a creative professional, there's never an excuse to not have fun.
+                            Creativity can solve problems of all shapes and sizes, and I believe we should have fun while designing solutions.
                         </p>
                         <p class="contact-info col-12 col-md-11 mb-3 bio">
-                            If you're into humor, authenticity, and empathy like I am, let's connect!
-                            Hit me up on
+                            If humor, authenticity, and empathy are your thing, let’s connect! Find me on
                             <a href="https://www.linkedin.com/in/jonnyabowd/" class="contact-text-link" target="_blank"
-                                rel="noopener noreferrer">LinkedIn</a> or my contact form.
+                                rel="noopener noreferrer">LinkedIn</a> or drop me a note through my contact form.
                         </p>
                         <p class="contact-info col-md-11">
-                            Thanks in advance,
+                            Looking forward to connecting,
                         </p>
                         <div class="col-12">
                             <img class="col-6 col-md-6 col-lg-4 px-4" src="/images/ja-sig.svg" alt="Jonny">
